tests/baselines/reference/optionalParamterAndVariableDeclaration2.errors.txt
tests/cases/compiler/optionalParamterAndVariableDeclaration2.ts(3,13): error TS2403: Subsequent variable declarations must have the same type.  Variable 'options' has type 'number | undefined' at tests/cases/compiler/optionalParamterAndVariableDeclaration2.ts 1:16, but here has type 'number'.


==== tests/cases/compiler/optionalParamterAndVariableDeclaration2.ts (1 errors) ====
    class C {
        constructor(options?: number) {
            var options = (options || 0);
                ~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'options' has type 'number | undefined' at tests/cases/compiler/optionalParamterAndVariableDeclaration2.ts 1:16, but here has type 'number'.
        }
    }
    